# travelTranslate

./: .gitignore  AGENTS.md  PROJECT.md  README.md  issue.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  conversations.py  favorites.py  ocr.py  phrases.py  speech.py  translate.py  vision.py  vision_translate.py
backend/app/core/: __init__.py  database.py  logging.py
backend/app/data/phrases/: phrases_en.json  phrases_ja.json  phrases_ko.json
backend/app/models/: __init__.py  conversation.py  favorite.py  message.py  phrase.py  translation_cache.py  user.py
backend/app/schemas/: __init__.py  common.py  conversation.py  favorite.py  phrase.py  translate.py  vision.py
backend/app/services/: conversation_service.py  phrase_service.py  text_translate_stream_service.py  translation_service.py  vision_service.py  vision_translate_service.py
backend/migrations/: env.py
backend/migrations/versions/: 20260412_0001_initial.py
backend/tests/: conftest.py  test_conversations.py  test_favorites.py  test_phrases.py  test_translate.py  test_vision.py
docs/: api.md  architecture.md  detail.md  schema.md
ios/: Package.swift  README.md  project.yml
ios/TravelTranslator/: Info.plist
ios/TravelTranslator.xcodeproj/: project.pbxproj
ios/TravelTranslator/App/: AppState.swift  RootView.swift  TravelTranslatorApp.swift
(+70 files in other folders)
