[project]
name = "traveltranslate-backend"
version = "0.1.0"
description = "TravelTranslator 旅行沟通助手后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "UP046"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]  # FastAPI 依赖注入模式

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
